--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
         <junit.version>5.8.2</junit.version>
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.2.RELEASE</version>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
@@ -43,6 +49,10 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
 
